MarcoKitTests/TestData/error/object6.marco
--before
{@}

--after
2-3: Unexpected identifier character '}'
